fixed background image on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,7 +253,7 @@ p {
 
     .background-image {
         width: 100%;
-        height: 100%;
+        height: 100vh;
     }
 
 }
@@ -342,7 +342,7 @@ p {
 
     .background-image {
         width: 100%;
-        height: 100%;
+        height: 100vh;
     }
 
 }
